--- a/MasterFixWeb/appsettings.json
+++ b/MasterFixWeb/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FbConnection": "database=localhost:C:\\Users\\MasterCim\\Desktop\\MasterFIX\\SAMPLEDATABASE.FDB ;user=sysdba;password=masterkey;Charset=NONE;"
 }
