--- a/MasterFixWeb/appsettings.Development.json
+++ b/MasterFixWeb/appsettings.Development.json
@@ -5,5 +5,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "FbConnection": "database=localhost:C:\\Users\\MasterCim\\Desktop\\MasterFIX\\SAMPLEDATABASE.FDB ;user=sysdba;password=masterkey;Charset=NONE;"
 }
